tasks/05-paracl/test/errors/func_add.pcl
foo = func() { return 1; }

a = foo + 5 / 1;
print a();